Finalized macaroni page and updated index
Added ingredients, steps, and description to macaroni recipe page.
Updated the background and text to the site to be dark gray and
white respectively so that the site is more pleasant to look at.

--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="color:white">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,44 @@
         <title>Macaroni</title>
     </head>
 
-    <body>
-        <h1>Macaroni</h1>
+    <body style="background-color:rgb(40, 40, 40)">
+        <h1>&emsp;Macaroni</h1>
+        <p>
+            &emsp;<img src="macaronipicture.jpg" height="300px"><br>
+            <h2>&emsp;Description</h2><br>
+            &emsp;&emsp;This dish is an American favorite. It's simple yet 
+            delicious, and can be made in a very short amount of time. By 
+            itself, it's just cheese and pasta. But we can make it so much 
+            better with just a little more effort and ingredients. This recipe 
+            will make macaroni and cheese so good that you can never go back 
+            to the old stuff again!
+        </p>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>Elbow Macaroni</li>
+                <li>Water</li>
+                <li>Butter</li>
+                <li>Flour</li>
+                <li>Salt</li>
+                <li>Pepper</li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>
+                    Boil your macaroni in water with 1 tablespoon of salt for 
+                    18 minutes.
+                </li>
+                <li>
+                    While your macaroni is boiling, make a roux by melting 
+                    butter in a pan, then adding flour, salt, and pepper. Stir 
+                    the mixture thoroughly.
+                </li>
+                <li>
+                    Add cheese to your roux and stir until smooth.
+                </li>
+                <li>
+                    Drain macaroni and add the cheese sauce. Done!
+                </li>
+            </ol>
     </body>
 </html>
