--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" style="color:white">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,9 @@
     <body>
         <h1>Odin Recipes</h1>
             <h2>
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="recipes/macaroni.html>">Macaroni</a></p>
+                <p>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="recipes/macaroni.html">Macaroni</a>
+                </p>
             </h2>
     </body>
 </html>
