Fixed typos/formatting, added spaghetti page

--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -11,7 +11,7 @@
         <h1>&emsp;Macaroni</h1>
         <p>
             &emsp;<img src="macaronipicture.jpg" height="300px"><br>
-            <h2>&emsp;Description</h2><br>
+            <h2>&emsp;Description</h2>
             &emsp;&emsp;This dish is an American favorite. It's simple yet 
             delicious, and can be made in a very short amount of time. By 
             itself, it's just cheese and pasta. But we can make it so much 
@@ -19,7 +19,7 @@
             will make macaroni and cheese so good that you can never go back 
             to the old stuff again!
         </p>
-        <h2>Ingredients</h2>
+        <h2>&emsp;Ingredients</h2>
             <ul>
                 <li>Elbow Macaroni</li>
                 <li>Water</li>
@@ -28,7 +28,7 @@
                 <li>Salt</li>
                 <li>Pepper</li>
             </ul>
-        <h2>Steps</h2>
+        <h2>&emsp;Steps</h2>
             <ol>
                 <li>
                     Boil your macaroni in water with 1 tablespoon of salt for 
