Updated index page to link to all recipes

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
         <title>Odin Recipes</title>
     </head>
 
-    <body>
+    <body style="background-color: rgb(40,40,40)">
         <h1>Odin Recipes</h1>
             <h2>
-                <p>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="recipes/macaroni.html">Macaroni</a>
-                </p>
+                <ul>
+                <li><a href="recipes/macaroni.html">Macaroni</a></li>
+                <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
+                <li><a href="recipes/hamburger.html">Hamburger</a></li>
+                </ul>
             </h2>
     </body>
 </html>
