Updated style attributes to simplify code
Originally, the html tag held the attribute to style text as white, and
the body tag held the attribute to style background as grey. The style
attribute can hold two values if you put a semicolon between them.
The body style attribute was added to the html tag for simplification.

--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="color:white">
+<html lang="en" style="color:white;background-color: rgb(40,40,40)">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
         <title>Hamburger</title>
     </head>
 
-    <body style="background-color:rgb(40, 40, 40)">
+    <body>
         <h1>&emsp;Hamburger</h1>
         <p>
             &emsp;<img src="hamburgerpicture.jpg" height="300px"><br>
