--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" style="color:white">
+<html lang="en" style="color:white;background-color: rgb(40,40,40)">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
         <title>Odin Recipes</title>
     </head>
 
-    <body style="background-color: rgb(40,40,40)">
+    <body>
         <h1>Odin Recipes</h1>
             <h2>
                 <ul>
