Added return to index button at bottom of recipes

--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -44,5 +44,6 @@
                     Eat!
                 </li>
             </ol>
+            <a href="../index.html">Return to index</a>
     </body>
 </html>
