--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -46,5 +46,6 @@
                     Drain macaroni and add the cheese sauce. Done!
                 </li>
             </ol>
+        <a href="../index.html">Return to index</a>
     </body>
 </html>
