--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -43,5 +43,6 @@
                     serve.
                 </li>
             </ol>
+            <a href="../index.html">Return to index</a>
     </body>
 </html>
