Added CSS to index/recipe pages

--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" style="color:white;background-color: rgb(40,40,40)">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../styles.css">
         <title>Hamburger</title>
     </head>
 
     <body>
-        <h1>&emsp;Hamburger</h1>
+        <h1 class="main-header">&emsp;Hamburger</h1>
         <p>
-            &emsp;<img src="hamburgerpicture.jpg" height="300px"><br>
+            <img class="image" src="hamburgerpicture.jpg"><br>
             <h2>&emsp;Description</h2>
             &emsp;&emsp;This simple placement of a beef patty changed between 
             two buns changed America forever. It is more ingrained in American 
@@ -18,7 +19,7 @@
             world think of when they think of the United States. It's the 
             hamburger.
         </p>
-        <h2>&emsp;Ingredients</h2>
+        <h2>Ingredients</h2>
             <ul>
                 <li>Ground beef</li>
                 <li>Buns</li>
