--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 
-<html lang="en" style="color:white;background-color: rgb(40,40,40)">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
         <title>Odin Recipes</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="main-header">&emsp;&nbsp;&nbsp;Odin Recipes</h1>
             <h2>
                 <ul>
-                <li><a href="recipes/macaroni.html">Macaroni</a></li>
-                <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
-                <li><a href="recipes/hamburger.html">Hamburger</a></li>
+                    <li><a href="recipes/macaroni.html">Macaroni</a></li>
+                    <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
+                    <li><a href="recipes/hamburger.html">Hamburger</a></li>
                 </ul>
             </h2>
     </body>
