Finalized spaghetti page style with CSS
This pages style will be applied to the other recipe pages in later
commits.

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -9,22 +9,29 @@
     </head>
 
     <body>
-        <h1>&emsp;Spaghetti</h1>
-        <p>
-            &emsp;<img src="spaghettipicture.jpg" height="300px"><br>
-            <h2>&emsp;Description</h2>
+        <h1 class="center main-header">Spaghetti</h1>
+        <div class="center">
+            <img src="spaghettipicture.jpg" height="300px">
+        </div>
+
+        <h2 class="center">Description</h2>
+        <p class="center">
             &emsp;&emsp;Spaghetti is a popular Italian dish that is easy 
             to make just like macaroni and cheese. It involves noodles, beef, 
             and tomato sauce. So simple, yet so tasty.
         </p>
-        <h2>&emsp;Ingredients</h2>
-            <ul>
-                <li>Noodles</li>
-                <li>Water</li>
-                <li>Ground beef</li>
-                <li>Spaghetti sauce</li>
-            </ul>
-        <h2>&emsp;Steps</h2>
+
+        <h2 class="center">Ingredients</h2>
+            <div class="center">
+                <ul>
+                    <li>Noodles</li>
+                    <li>Water</li>
+                    <li>Ground beef</li>
+                    <li>Spaghetti sauce</li>
+                </ul>
+            </div>    
+
+        <h2 class="center">Steps</h2>
             <ol>
                 <li>
                     Boil your spaghetti noodles in water with 1 tablespoon of salt for 
@@ -44,6 +51,9 @@
                     serve.
                 </li>
             </ol>
-            <a href="../index.html">Return to index</a>
+            
+        <div class="center">
+        <a href="../index.html">Return to index</a>
+        </div>
     </body>
 </html>
