Updated all pages, CSS upgrade complete

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     </head>
 
     <body>
-        <h1 class="main-header">&emsp;&nbsp;&nbsp;Odin Recipes</h1>
+        <h1 class="center main-header">Odin Recipes</h1>
             <h2>
-                <ul>
-                    <li><a href="recipes/macaroni.html">Macaroni</a></li>
-                    <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
-                    <li><a href="recipes/hamburger.html">Hamburger</a></li>
-                </ul>
+                <div class="center">
+                    <ul>
+                        <li><a href="recipes/macaroni.html">Macaroni</a></li>
+                        <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
+                        <li><a href="recipes/hamburger.html">Hamburger</a></li>
+                    </ul>
+                </div>
             </h2>
     </body>
 </html>
