--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -9,24 +9,31 @@
     </head>
 
     <body>
-        <h1 class="main-header">&emsp;Hamburger</h1>
-        <p>
+        <h1 class="center main-header">Hamburger</h1>
+        <div class="center">
             <img class="image" src="hamburgerpicture.jpg"><br>
-            <h2>&emsp;Description</h2>
-            &emsp;&emsp;This simple placement of a beef patty changed between 
-            two buns changed America forever. It is more ingrained in American 
-            food culture than even milk. It's the food that people around the 
-            world think of when they think of the United States. It's the 
-            hamburger.
-        </p>
-        <h2>Ingredients</h2>
-            <ul>
-                <li>Ground beef</li>
-                <li>Buns</li>
-                <li>Spices</li>
-                <li>Your favorite toppings</li>
-            </ul>
-        <h2>&emsp;Steps</h2>
+        </div>
+
+        <h2 class="center">Description</h2>
+            <p class="center">
+                This simple placement of a beef patty changed between 
+                two buns changed America forever. It is more ingrained in American 
+                food culture than even milk. It's the food that people around the 
+                world think of when they think of the United States. It's the 
+                hamburger.
+            </p>
+
+        <h2 class="center">Ingredients</h2>
+            <div class="center">
+                <ul>
+                    <li>Ground beef</li>
+                    <li>Buns</li>
+                    <li>Spices</li>
+                    <li>Your favorite toppings</li>
+                </ul>
+            </div>
+        
+        <h2 class="center">Steps</h2>
             <ol>
                 <li>
                     Take your ground beef and place it in your pan. Add spices 
@@ -45,6 +52,9 @@
                     Eat!
                 </li>
             </ol>
+        
+        <div class="center">
             <a href="../index.html">Return to index</a>
+        </div>
     </body>
 </html>
