--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -15,11 +15,11 @@
         </div>
 
         <h2 class="center">Description</h2>
-        <p class="center">
-            &emsp;&emsp;Spaghetti is a popular Italian dish that is easy 
-            to make just like macaroni and cheese. It involves noodles, beef, 
-            and tomato sauce. So simple, yet so tasty.
-        </p>
+            <p class="center">
+                Spaghetti is a popular Italian dish that is easy 
+                to make just like macaroni and cheese. It involves noodles, beef, 
+                and tomato sauce. So simple, yet so tasty.
+            </p>
 
         <h2 class="center">Ingredients</h2>
             <div class="center">
@@ -53,7 +53,7 @@
             </ol>
             
         <div class="center">
-        <a href="../index.html">Return to index</a>
+            <a href="../index.html">Return to index</a>
         </div>
     </body>
 </html>
