--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -37,23 +37,25 @@
             </div>
             
         <h2 class="center">Steps</h2>
-            <ol>
-                <li>
-                    Boil your macaroni in water with 1 tablespoon of salt for 
-                    18 minutes.
-                </li>
-                <li>
-                    While your macaroni is boiling, make a roux by melting 
-                    butter in a pan, then adding flour, salt, and pepper. Stir 
-                    the mixture thoroughly.
-                </li>
-                <li>
-                    Add cheese to your roux and stir until smooth.
-                </li>
-                <li>
-                    Drain macaroni and add the cheese sauce. Done!
-                </li>
-            </ol>
+            <div class="center">
+                <ol>
+                    <li>
+                        Boil your macaroni in water with 1 tablespoon of salt for 
+                        18 minutes.
+                    </li>
+                    <li>
+                        While your macaroni is boiling, make a roux by melting 
+                        butter in a pan, then adding flour, salt, and pepper. Stir 
+                        the mixture thoroughly.
+                    </li>
+                    <li>
+                        Add cheese to your roux and stir until smooth.
+                    </li>
+                    <li>
+                        Drain macaroni and add the cheese sauce. Done!
+                    </li>
+                </ol>
+            </div>
         
         <div class="center">
         <a href="../index.html">Return to index</a>
