--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -32,25 +32,27 @@
             </div>    
 
         <h2 class="center">Steps</h2>
-            <ol>
-                <li>
-                    Boil your spaghetti noodles in water with 1 tablespoon of salt for 
-                    12 minutes.
-                </li>
-                <li>
-                    While your noodles are boiling, take your ground beef and 
-                    cook it in a pan. Make sure to break the ground beef up 
-                    into fine pieces as you cook it with your utensil.
-                </li>
-                <li>
-                    Add spaghetti sauce to the ground beef and cook it a little 
-                    more so that the sauce is the same temperature as the beef.
-                </li>
-                <li>
-                    Drain noodles and add the ground beef. Now it's ready to 
-                    serve.
-                </li>
-            </ol>
+            <div class="center">
+                <ol>
+                    <li>
+                        Boil your spaghetti noodles in water with 1 tablespoon of salt for 
+                        12 minutes.
+                    </li>
+                    <li>
+                        While your noodles are boiling, take your ground beef and 
+                        cook it in a pan. Make sure to break the ground beef up 
+                        into fine pieces as you cook it with your utensil.
+                    </li>
+                    <li>
+                        Add spaghetti sauce to the ground beef and cook it a little 
+                        more so that the sauce is the same temperature as the beef.
+                    </li>
+                    <li>
+                        Drain noodles and add the ground beef. Now it's ready to 
+                        serve.
+                    </li>
+                </ol>
+            </div>
             
         <div class="center">
             <a href="../index.html">Return to index</a>
