Text and image size now adjusts to window size
Applied flex box, align-items, and justify-content to center class. It
originally used text-align.

--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -10,8 +10,8 @@
 
     <body>
         <h1 class="center main-header">Macaroni</h1>
-        <div class="center">
-            <img src="macaronipicture.jpg" height="300px">
+        <div class="imageclass">
+            <img src="macaronipicture.jpg">
         </div>
             
         <h2 class="center">Description</h2>
