--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -10,8 +10,8 @@
 
     <body>
         <h1 class="center main-header">Hamburger</h1>
-        <div class="center">
-            <img class="image" src="hamburgerpicture.jpg"><br>
+        <div class="imageclass">
+            <img src="hamburgerpicture.jpg">
         </div>
 
         <h2 class="center">Description</h2>
@@ -54,7 +54,7 @@
                     </li>
                 </ol>
             </div>
-            
+
         <div class="center">
             <a href="../index.html">Return to index</a>
         </div>
