--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -10,8 +10,8 @@
 
     <body>
         <h1 class="center main-header">Spaghetti</h1>
-        <div class="center">
-            <img src="spaghettipicture.jpg" height="300px">
+        <div class="imageclass">
+            <img src="spaghettipicture.jpg">
         </div>
 
         <h2 class="center">Description</h2>
@@ -53,7 +53,7 @@
                     </li>
                 </ol>
             </div>
-            
+
         <div class="center">
             <a href="../index.html">Return to index</a>
         </div>
